<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="app_name">Caira 2</string>

    <string name="nulo"> </string>
    <string name="title_activity_instrucciones">Instrucciones</string>
    <string name="futuro_fragment">Caira conecta estudiantes con instituciones educativas. En un mundo en constante cambio, la educación debe prepararnos para adaptarnos y encontrar nuestro camino</string>
    <string name="futuro_fragment_titulo">Hacemos realidad el futuro de la educación</string>
    <string name="estudiantes_fragment">
        Pruébate en nuestro laboratorio y conócete a ti mismo como nunca antes habías creído posible.\n
        Utiliza Caira como una herramienta para conocer más personas con las mismas inquietudes que tú y alcanza tu mejor versión. Accede a formación exclusiva, aprende y conoce a tu mejor yo.</string>
    <string name="estudiantes_fragment_subtitulo">Conócete más se mejor. Conecta, aprende, crece</string>
    <string name="estudiantes_fragment_titulo">ESTUDIANTES</string>
    <string name="universidades_fragment">
        Diseña un perfil a medida y crea contenido de todo tipo que te permitirá que los estudiantes te conozcan, interactúen contigo y te escojan como la mejor opción.\n
        Accede a nuestro dashboard y podrás tener un control absoluto de todo lo que ocurre en tu red. Proporcionamos información real proveniente de las métricas de tus usuarios para que puedas mejorar constantemente tu desempeño.</string>
    <string name="title_activity_bodyapp">BodyappActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to Caira</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_centres">centres</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="account_settings">Account settings</string>
    <string name="social_profile">Social profile</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="email_addres">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="join">Register Now!</string>
    <string name="forgot">Forgot password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="centers">Centers</string>
    <string name="contacts">Contacts</string>
    <string name="preferred_course">Prefered Course</string>
    <string name="type">Type:</string>
    <string name="location">Location</string>
    <string name="duration">Duration:</string>
    <string name="price">Price:</string>
    <string name="get_now">Get Now</string>
    <string name="baseImgURL">https://apicaira.lunarxy.com</string>


</resources>